--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,60 @@
+{% extends 'blog/base.html' %}
+
+
+{% block content %}
+
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                {{ post.published_date }}
+            </div>
+            <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <!-- <h1><a href="">{{ post.title }}</a></h1> -->
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+
+{% endblock content %}
+
+<!-- {% load staticfiles %}
 <html>
       <head>
           <title> bulaso`s blog</title>
-      </head>
-      <body>
+          <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+          <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+          <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+          <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
-            <div>
+      </head> -->
+      <!-- <body>
+
+            <div class="page-header">
                 <h1><a href="/">Bulaso`s Blog</a></h1>
             </div>
 
-            {% for post in posts %}
-                <div>
+            <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}
+                        <div class="post">
+                            <div class="date">
+                                {{ post.published_date }}
+                            </div>
+                            <h1><a href="">{{ post.title }}</a></h1>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div> -->
+
+            <!-- {% for post in posts %}
+                 <div class="post">
                     <p>published: {{ post.published_date }}</p>
                     <h1><a href="">{{ post.title }}</a></h1>
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
-            {% endfor %}
+            {% endfor %} -->
           <!-- <div>
               <h1><a href=""> bulaso`s blog</a></h1>
           </div>
@@ -30,5 +70,5 @@
               <h2><a href="">Segundo post</a></h2>
               <p>hola hola hola hola.</p>
           </div> -->
-      </body>
-  </html>
+      <!-- </body> -->
+  <!-- </html> -->
